--- a/public/home.html
+++ b/public/home.html
@@ -51,10 +51,9 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Simple Sidebar</h1>
-                        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <h1>Details Container</h1> This is the details container where details associated with all the side bar links will be populated..
+                        <code>#page-content-wrapper</code>.</p>
+                        <a href="#menu-toggle" class="fixed-button btn btn-default" id="menu-toggle">Toggle Menu</a>
                     </div>
                 </div>
             </div>
