--- a/public/home.html
+++ b/public/home.html
@@ -52,8 +52,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Simple Sidebar</h1>
-    <a href="/auth/facebook">Sign in with Facebook</a>
-    <br></br>
+                        <a href="/auth/facebook" id="fb-sign-in1">Sign in with Facebook</a>
+                        <br></br>
                         <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
@@ -66,10 +66,27 @@
 </body>
 <script src="/javascripts/jquery.min.js"></script>
 <script>
-$("#menu-toggle").click(function(e) {
-    e.preventDefault();
-    $("#wrapper").toggleClass("toggled");
-});
+(function($, window, undefined) {
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });
+    // $('#fb-sign-in').click(function() {
+    //     $.ajax({
+    //         url: 'auth/facebook',
+    //         // data: myData,
+    //         type: 'GET',
+    //         crossDomain: true,
+    //         dataType: 'jsonp',
+    //         success: function(data) {
+    //             console.log(data);
+    //         },
+    //         error: function() {
+    //             alert('Failed!');
+    //         }
+    //     });
+    // });
+})(jQuery, window);
 </script>
 
 </html>
