--- a/public/logged-in-home.html
+++ b/public/logged-in-home.html
@@ -20,13 +20,28 @@
                     </a>
                 </li>
                 <li>
+                    <a href="#attendance">Attendence</a>
+                </li>
+                <li>
+                    <a href="#results">Results</a>
+                </li>
+                <li>
+                    <a href="#activities">Activities</a>
+                </li>
+                <li>
+                    <a href="#events">Events</a>
+                </li>
+                <li>
+                    <a href="#admissions">Admissions</a>
+                </li>
+                <li>
                     <a href="#about-us">About Us</a>
                 </li>
                 <li>
                     <a href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a href="/auth/facebook" id="fb-sign-in1">Log in</a>
+                    <a href="/logout">Logout</a>
                 </li>
             </ul>
         </div>
