--- a/public/home.html
+++ b/public/home.html
@@ -26,7 +26,10 @@
                     <a href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a href="/auth/facebook" id="fb-sign-in1">Log in</a>
+                    <a href="/auth/facebook" id="fb-sign-in1">fb log in</a>
+                </li>
+                <li>
+                    <a href="/auth/google" id="fb-sign-in1">google log in</a>
                 </li>
             </ul>
         </div>
