integrated twitter login

--- a/public/home.html
+++ b/public/home.html
@@ -26,10 +26,13 @@
                     <a href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a href="/auth/facebook" id="fb-sign-in1">fb log in</a>
+                    <a href="/auth/facebook" id="fb-sign-in">fb log in</a>
                 </li>
                 <li>
-                    <a href="/auth/google" id="fb-sign-in1">google log in</a>
+                    <a href="/auth/google" id="google-sign-in">google log in</a>
+                </li>
+                <li>
+                    <a href="/auth/twitter" id="twitter-sign-in">twitter log in</a>
                 </li>
             </ul>
         </div>
