re-factored homepage

--- a/public/logged-in-home.html
+++ b/public/logged-in-home.html
@@ -49,13 +49,13 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <div id="profile" class="row hidden">
+                <div id="profile" class="row hidden text-right">
                     <div class="col-lg-1">
-                        <img id="profile-pic" src="" alt="profile-pic" class="mll"></div>
+                        <img id="profile-pic" src="" alt="profile-pic"></div>
                 </div>
                 <div class="row mtm">
                     <div class="col-lg-3 text-left">
-                        <label id="user-name"></label>
+                        <h3 id="user-name"></h3>
                     </div>
                 </div>
                 <div class="row">
