--- a/public/logged-in-home.html
+++ b/public/logged-in-home.html
@@ -45,7 +45,7 @@
                     </div>
                 </li>
                 <li class="mtm">
-                    <a href="#attendance">Attendence</a>
+                    <a href="#attendance">Attendance</a>
                 </li>
                 <li>
                     <a href="#results">Results</a>
