added slim scroll just for fun. Starting application APIs now!

--- a/public/home.html
+++ b/public/home.html
@@ -51,28 +51,13 @@
         <!-- /#page-content-wrapper -->
     </div>
 </body>
-<script src="/javascripts/jquery.min.js"></script>
+<script src="/javascripts/libraries/jquery.min.js"></script>
 <script>
 (function($, window, undefined) {
     $("#menu-toggle").click(function(e) {
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
     });
-    // $('#fb-sign-in').click(function() {
-    //     $.ajax({
-    //         url: 'auth/facebook',
-    //         // data: myData,
-    //         type: 'GET',
-    //         crossDomain: true,
-    //         dataType: 'jsonp',
-    //         success: function(data) {
-    //             console.log(data);
-    //         },
-    //         error: function() {
-    //             alert('Failed!');
-    //         }
-    //     });
-    // });
 })(jQuery, window);
 </script>
 
