--- a/public/logged-in-home.html
+++ b/public/logged-in-home.html
@@ -16,7 +16,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        <h2>Mark It</h2>
+                        <h1>Mark It</h1>
                     </a>
                 </li>
                 <li class="default-line-height white-font profile-background">
@@ -86,6 +86,6 @@
 </body>
 <script src="/javascripts/libraries/jquery.min.js"></script>
 <script src="/javascripts/libraries/tiny-scroll-bar.js"></script>
+<script src="/javascripts/libraries/knockback-min.js"></script>
 <script src="/javascripts/application.js"></script>
-
 </html>
