--- a/public/test.html
+++ b/public/test.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="navbar navbar-default navbar-static-top">
+    <div class="navbar navbar-inverse navbar-static-top">
         <div class="container">
             <a class="navbar-brand" href="#">Mark It</a>
             <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
@@ -21,17 +21,43 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toogle" data-toggle="dropdown">Attendance  <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toogle" data-toggle="dropdown">Attendance <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                         	<li><a href="#">New</a></li>
                         	<li><a href="#">Reports</a></li>
                         	<li><a href="#">Summary</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Students</a></li>
-                    <li><a href="#">Reports</a></li>
-                    <li><a href="#">Announcements</a></li>
-                    <li><a href="#">Profile</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toogle" data-toggle="dropdown">Students <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                        	<li><a href="#">New</a></li>
+                        	<li><a href="#">Reports</a></li>
+                        	<li><a href="#">Summary</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toogle" data-toggle="dropdown">Reports <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                        	<li><a href="#">Daily</a></li>
+                        	<li><a href="#">Weekly</a></li>
+                        	<li><a href="#">Monthly</a></li>
+                        </ul>
+                    </li>                    
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toogle" data-toggle="dropdown">Announcements <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                        	<li><a href="#">New</a></li>
+                        	<li><a href="#">Details</a></li>
+                        </ul>
+                    </li>                    
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toogle" data-toggle="dropdown">Profile <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                        	<li><a href="#">Details</a></li>
+                        	<li><a href="#">Logout</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
