--- a/public/home.html
+++ b/public/home.html
@@ -3,62 +3,48 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Mark-It</title>
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" href="/stylesheets/side-bar.css">
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <title>test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
 </head>
 
 <body>
-    <div id="wrapper" class="">
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="#">
-                        <h2>Mark It</h2>
-                    </a>
-                </li>
-                <li>
-                    <a href="#about-us">About Us</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-                <li>
-                    <a href="/auth/facebook" id="fb-sign-in">fb log in</a>
-                </li>
-                <li>
-                    <a href="/auth/google" id="google-sign-in">google log in</a>
-                </li>
-                <li>
-                    <a href="/auth/twitter" id="twitter-sign-in">twitter log in</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /#sidebar-wrapper -->
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h1>No user logged in</h1>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
-                    </div>
-                </div>
+
+    <script id="login-strategy-template">
+    
+    </script>
+
+    <div class="navbar navbar-inverse navbar-static-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Mark It</a>
+            <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <div class="collapse navbar-collapse navHeaderCollapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toogle" data-toggle="dropdown">About Us <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Feedback</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toogle" data-toggle="dropdown">Profile <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Details</a></li>
+                            <li><a href="#">Logout</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
-        <!-- /#page-content-wrapper -->
     </div>
+    <script type="text/javascript" src="/javascripts/libraries/jquery.min.js"></script>
+    <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
 </body>
-<script src="/javascripts/libraries/jquery.min.js"></script>
-<script>
-(function($, window, undefined) {
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-    });
-})(jQuery, window);
-</script>
 
 </html>
