--- a/public/test.html
+++ b/public/test.html
@@ -23,39 +23,46 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toogle" data-toggle="dropdown">Attendance <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                        	<li><a href="#">New</a></li>
-                        	<li><a href="#">Reports</a></li>
-                        	<li><a href="#">Summary</a></li>
+                            <li><a href="#">New</a></li>
+                            <li><a href="#">Reports</a></li>
+                            <li><a href="#">Summary</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toogle" data-toggle="dropdown">Students <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                        	<li><a href="#">New</a></li>
-                        	<li><a href="#">Reports</a></li>
-                        	<li><a href="#">Summary</a></li>
+                            <li><a href="#">New</a></li>
+                            <li><a href="#">Reports</a></li>
+                            <li><a href="#">Summary</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toogle" data-toggle="dropdown">Reports <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                        	<li><a href="#">Daily</a></li>
-                        	<li><a href="#">Weekly</a></li>
-                        	<li><a href="#">Monthly</a></li>
+                            <li><a href="#">Daily</a></li>
+                            <li><a href="#">Weekly</a></li>
+                            <li><a href="#">Monthly</a></li>
                         </ul>
-                    </li>                    
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toogle" data-toggle="dropdown">Announcements <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                        	<li><a href="#">New</a></li>
-                        	<li><a href="#">Details</a></li>
+                            <li><a href="#">New</a></li>
+                            <li><a href="#">Details</a></li>
                         </ul>
-                    </li>                    
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toogle" data-toggle="dropdown">About Us <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Feedback</a></li>
+                        </ul>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toogle" data-toggle="dropdown">Profile <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                        	<li><a href="#">Details</a></li>
-                        	<li><a href="#">Logout</a></li>
+                            <li><a href="#">Details</a></li>
+                            <li><a href="#">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
